# doba

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: copilot-instructions.md
docs/: HANDOFF.md
include/: buffer.h  buffex.h  hash_base.h  http11_server.h  platform.h  reference_buffer.h  server.h  server_base.h
include/builder/: builder.h  property.h
include/common/: builder.h  byte_storage.h  date_server.h  date_server_helpers.h  date_server_helpers_linux.h  date_server_helpers_windows.h  deserialize_result.h  execution_policy.h  hash_base.h  hash_map.h  hash_set.h  property.h  reader.h  reference_buffer.h  rob.h  rorb.h  thread_pool.h  virtual_buffer.h  writer.h
include/network/: environment.h  environment_linux.h  environment_windows.h
include/protocol/: deserialization.h  result.h  serialization.h
include/protocol/http11/: body.h  body_codec_chunked.h  body_codec_raw.h  body_common.h  body_deserializer.h  body_reader.h  body_serializer.h  body_storage.h  body_writer.h  connection.h  constants.h  context.h  decoder.h  header.h  header_names.h  headers.h  helpers.h  message.h  method.h  method_names.h  methods.h  parsed_types.h  policies.h  query_parameter.h  reason_phrase.h  reason_phrases.h  request.h  request_getter.h  response.h  response_handler.h  router.h  router_handler_parametrized.h  router_handler_parametrized_base.h  router_handler_static.h  router_types.h  server.h  status_code.h  status_codes.h  status_line.h  status_lines.h  (+4 more)
include/protocol/http11/body/: decoder.h  decoder_chunked.h  decoder_raw.h  deserializer.h  encoder.h  encoder_chunked.h  encoder_raw.h  serializer.h  writer_chunked.h  writer_error.h  writer_raw.h  writer_state.h
include/protocol/http11/checkers/: connection.h  content_length.h  date.h  expect.h  host.h  transfer_encoding.h
include/server/: server_tcpip.h  server_tcpip_linux.h  server_tcpip_windows.h
include/server/transport/: tcpip.h  tcpip_windows.h
include/string/: utils.h
include/transport/: deserialization_result.h  process_result.h  result.h
include/transport/server/: result.h  tcpip.h  tcpip_linux.h  tcpip_windows.h
test/01.main/: CMakeSettings.json  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
test/ut-001-main/: CMakeLists.txt  README.md
test/ut-001-main/src/: main.cpp
test/ut-002-request-plus-contract/: CMakeLists.txt
test/ut-002-request-plus-contract/src/: main.cpp
(+157 files in other folders)
